--- a/src/components/FoodItem/FoodItem.css
+++ b/src/components/FoodItem/FoodItem.css
@@ -1,5 +1,4 @@
-
-.food-item{
+.food-item {
     width: 100%;
     margin: auto;
     border-radius: 15px;
@@ -7,49 +6,61 @@
     transition: 0.3s;
     animation: fadeIn 1s;
 }
-.food-item-image{
+
+.food-item-image {
     width: 100%;
-    border-radius: 15px 15px 0px 0px ;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 15px 15px 0px 0px;
 }
-.food-item-info{
+
+.food-item-info {
     padding: 20px;
 }
-.food-item-name-rating{
+
+.food-item-name-rating {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
 }
-.food-item-name-rating p{
+
+.food-item-name-rating p {
     font-size: 20px;
     font-family: 500;
 }
-.food-item-name-rating img{
+
+.food-item-name-rating img {
     width: 70px;
 }
-.food-item-desc{
+
+.food-item-desc {
     font-size: 12px;
     color: #676767;
 }
-.food-item-price{
+
+.food-item-price {
     color: tomato;
     font-size: 22px;
     font-weight: 500;
     margin: 10px 0;
 }
-.food-item-img-container{
+
+.food-item-img-container {
     position: relative;
 }
-.food-item-img-container .add{
+
+.food-item-img-container .add {
     width: 35px;
     position: absolute;
     bottom: 15px;
     border-radius: 50%;
     right: 15px;
-    cursor: pointer; 
+    cursor: pointer;
     border-radius: 50%;
 }
-.food-item-counter{
+
+.food-item-counter {
     position: absolute;
     bottom: 15px;
     right: 15px;
@@ -60,7 +71,45 @@
     border-radius: 50px;
     background-color: white;
 }
-.food-item-counter img{
+
+.food-item-counter img {
     width: 30px;
     cursor: pointer;
+}
+
+.food-item-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.food-item-name-rating {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 100%;
+    overflow: hidden;
+}
+
+.food-item-name-rating p {
+    white-space: nowrap;
+    /* Prevent text from wrapping to the next line */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    /* Add ellipsis (...) if the text overflows */
+}
+
+.food-item-desc {
+    margin: 10px 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    /* Show up to 3 lines of text, adjust as needed */
+    -webkit-box-orient: vertical;
+}
+
+.food-item-price {
+    font-weight: bold;
 }
