--- a/src/components/Banner/BannerHome.css
+++ b/src/components/Banner/BannerHome.css
@@ -1,7 +1,7 @@
 .BannerHome {
     height: 34vw;
     margin: 30px auto;
-    background: url('../../assets/header_img.png') no-repeat;
+    background: url('https://www.foodiesfeed.com/wp-content/uploads/2023/06/burger-with-melted-cheese.jpg') no-repeat;
     background-size: cover;
     position: relative;
     border-radius: 20px;
