--- a/src/index.css
+++ b/src/index.css
@@ -15,9 +15,11 @@ a {
   text-decoration: none;
   color: inherit;
 }
-p{
-  margin: 0 !important; 
+
+p {
+  margin: 0 !important;
 }
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -26,4 +28,20 @@ p{
   100% {
     opacity: 1;
   }
+}
+
+
+/* src/components/Loading.css */
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+  /* Ensure it's above all other content */
 }
